<resources>
    <string name="app_name">Grafika App</string>
    <string name="title_activity_menu_utama">Menu Utama</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Halaman Utama</string>
    <string name="menu_materi">Materi</string>
    <string name="menu_video">Video</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_petunjuk_penggunaan">Halaman Utama</string>
    <string name="menu_informasi">Informasi</string>
    <string name="sistem_tutor">Sistem Tutor</string>
    <string name="grafika_komputer">Grafika Komputer</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="materi">Materi</string>
    <string name="video">Video</string>
    <string name="quiz">Quiz</string>
    <string name="lainnya">Lainnya</string>
    <string name="petunjuk_penggunaan">Petunjuk Penggunaan</string>
    <string name="informasi">Informasi</string>
    <string name="string_opengl">string/opengl</string>
    <string name="informasi_pengembang">Informasi Pengembang</string>
    <string name="informasi_aplikasi">Informasi Aplikasi</string>
    <string name="info">Septian Adi Pratama\n150533604474\nS1 Pendidikan Teknik Informatika 2015</string>
    <string name="info1">Apabila terjadi error atau ingin memberikan saran pada aplikasi ini, anda dapat menghubungi kontak pengembang dibawah ini</string>
    <string name="e_mail">e-mail</string>
    <string name="whatsapp">whatsapp</string>
    <string name="grafika_app">Grafika App</string>
    <string name="informasi_version">Version 1.0.0\n\n\nAplikasi Sistem Tutor\nMatakuliah Grafika Komputer</string>
    <string name="UM">Universitas Negeri Malang</string>
    <string name="splash_grafika_komputer">Sistem Tutor\nGrafika Komputer</string>
    <string name="github">GitHub</string>
    <string name="text_pengantar">Grafika komputer adalah suatu bidang yang mempelajari bagaimana menghasilkan suatu gambar menggunakan komputer. Sehingga di dalam grafika komputer akan dibahas teknik-teknik menggambar.</string>
    <string name="text_definisi">Grafika Komputer  berkaitan dengan pembuatan dan manipulasi gambar (visual) secara digital. Bentuk sederhana dari grafika komputer adalah grafika komputer 2D yang kemudian berkembang menjadi grafika komputer 3D, pemrosesan citra (image processing), dan pengenalan pola (pattern recognition). Grafika komputer sering dikenal juga dengan istilah visualisasi data.</string>
    <string name="tujuan">Setelah mengikuti kegiatan pembelajaran matakuliah grafika komputer, mahasiswa diharapkan :</string>
    <string name="tujuan1">Mengetahui apa itu grafika komputer.</string>
    <string name="tujuan2">Mampu membandingkan macam-macam grafik.</string>
    <string name="tujuan3">Mampu membuat aplikasi-aplikasi transformasi.</string>
    <string name="tujuan4">Mampu membandingkan tool dan teknik-teknik pada grafika komputer.</string>
    <string name="tujuan5">Mampu membangun aplikasi grafika komputer.</string>
    <string name="materi1_pengertian_judul">PENGERTIAN GRAFIKA KOMPUTER</string>
    <string name="materi1_pengertian_1"><b>Grafika komputer <i>(Computer Graphic)</i></b> dapat diartikan sebagai seperangkat alat yang terdiri dari <i>hardware</i> dan <i>software</i> untuk membuat gambar, grafik atau citra realistik untuk seni, game komputer, foto dan film animasi. Sistem grafika komputer dapat dijalankan dengan komputer pribadi <i>(personal computer)</i> atau <i>workstation</i>.</string>
    <string name="materi1_pengertian_2">Grafika komputer semakin lama semakin pesat perkembangannya sehingga definisi dari grafika komputer dapat diartikan sebagai suatu studi tentang bagaimana menggambar (membuat grafik) dengan menggunakan komputer dan manipulasinya (merubah sedikit/transformasi/animasi).</string>
    <string name="materi1_pengertian_3">Pengertian <i>image</i>/citra berbeda dengan grafik, <i>image</i> adalah gambar yang diperoleh dengan alat pengambil gambar, seperti kamera, scanner, dll. Sedangkan grafik adalah gambar yang dibuat dengan cara tertentu, yaitu cara yang ada di grafik komputer. Grafik dan image termasuk <i>picture</i>/gambar.</string>
    <string name="materi1_sejarah_judul">SEJARAH GRAFIKA KOMPUTER</string>
    <string name="materi1_sejarah_1"><b>Sejarah grafika </b> telah dimulai sejak jaman dahulu kala yaitu ketika bangsa Mesir, Roma dan Yunani berkomunikasi secara grafik. Beberapa lukisan terdapat pada batu nisan orang Mesir dapat dikatakan sebagai lukisan teknik.</string>
    <string name="materi1_sejarah_2">Perkembangan grafika komputer secara sederhana dapat dibagi menjadi empat fase, yaitu :</string>
    <string name="materi1_sejarah_3">Fase Pertama (1950) era grafika komputer interaktif</string>
    <string name="materi1_sejarah_4">Tidak begitu cepat karena teknologi, jumlah dan harga komputer tidak mendukung.</string>
    <string name="materi1_sejarah_5">MIT berhasil mengembangkan komputer <i>whirlwind</i> dengan tabung sinar katode (<i>Cathode Ray Tube</i>-CRT).</string>
    <string name="materi1_sejarah_6">Sudah menggunakan pena cahaya (<i>light pen</i>) yaitu sebuah alat input bentuknya seperti pensil yang digunakan untuk memilih posisi, menunjuk sesuatu dan menggambar pada layar dengan pendeteksian cahaya yang datang dari titik-titik pada layar CRT.</string>
    <string name="materi1_sejarah_7">Telah ada alat pemrograman otomatis (<i>Automatic Programming Tool</i>).</string>
    <string name="materi1_sejarah_8">Fase Kedua (1960) Jaman Penelitian/Riset Grafika Komputer Interaktif</string>
    <string name="materi1_sejarah_9">Grafika Interaktif modern telah ditemukan oleh Ivan Sutherland.</string>
    <string name="materi1_sejarah_10">Mengembangkan teknik interaktif dengan sarana <i>keyboard</i> dan pena cahaya.</string>
    <string name="materi1_sejarah_11">Sejumlah projek penelitian dan produk <i>Computer Aided Design/Manufacturing</i> (CAD/CAM) telah muncul</string>
    <string name="materi1_sejarah_12">Fase Ketiga (1970)</string>
    <string name="materi1_sejarah_13">Grafika komputer interaktif telah digunakan oleh sektor industri, pemerintah dan ilmuwan untuk memperbaiki kualitas desain produk secara cepat dan mudah.</string>
    <string name="materi1_sejarah_14">Fase Keempat (1980-1990)</string>
    <string name="materi1_sejarah_15">Penelitian pada dekade ini bertumpu pada penggabungan dan pengotomasasian pelbagi unsur desain dan pemodelan pejal (<i>solid modelling</i>).</string>
    <string name="materi1_sejarah_16">Teknologi hibrid mulai diperkenalkan. Teknologi ini berguna untuk penggabungan objek pejal dengan permukaan.</string>
    <string name="materi1_opengl_1">Sejarah OpenGL</string>
    <string name="materi1_opengl_2">Pada tahun 1982, James H. Clark memulai membuka perusahaan komputer grafis bernama Silicon Graphics Computer System (SGI). Para teknisi SGI membutuhkan cara yang standar spesifikasi untuk pengoperasian dan transformasi 3D, oleh sebab itu mereka mendesain sebuah aplikasi pemrograman antarmuka (API) yang bernama IrisGL.</string>
    <string name="materi1_opengl_image1">Foto James H. Clark</string>
    <string name="materi1_opengl_3">IrisGL ini hanya dapat digunakan pada hardware keluaran dari SGI (tidak bersifat open-standard). Pada saat yang bersamaan, vendor lain termasuk Sun Microsystem, IBM dan Hewlett-Packard juga mengeluarkan produk 3D hardware di pasaran. Mereka menggunakan jenis API lain yang disebut PHIGS. Karena vendor lain juga meluncurkan produk 3D hardware di pasaran, lingkup pemasaran SGI pun menjadi berkurang.</string>
    <string name="materi1_opengl_image2">Logo IrisGL</string>
    <string name="materi1_opengl_4">Untuk kembali mendongkrak penjualan produk mereka ke pasaran, akhirnya SGI mengubah IrisGL menjadi open-standard. Namun akrena alasan lisensi dan hak paten, mereka tidak dapat meluncurkan IrisGL versi open-standard. Akhirnya mereka membuat API baru berbasis IrisGL yang diberi nama OpenGL.</string>
    <string name="materi1_opengl_5">Awalnya, OpenGL didesain untuk digunakan pada pemrograman C/C++, namun seiring dengan berjalannya waktu, OpenGL dapat digunakan pada berbagai jenis bahasa pemrograman seperti, Java, Visual, Basic, Delphi, dan sebagainya.</string>
    <string name="materi1_opengl_6">Pengenalan OpenGL</string>
    <string name="materi1_opengl_7">OpenGL adalah sebuah program aplikasi interface (API) yang digunakan untuk mendefinisikan komputer grafis 2D dan 3D. Program lintas-platform API ini umumnya menjadi standar dalam industri komputer dalam interaksi dengan komputer grafis 2D dan 3D. Singkatnya, OpenGL menghilangkan kebutuhan programmer untuk menulis ulang bagian grafis dari sistem setiap terdapat upgrade sistem.</string>
    <string name="materi1_opengl_8">Fungsi dasar dari OpenGL adalah untuk mengeluarkan koleksi perintah khusus atau executable ke sistem operasi. Dengan demikian, program ini bekerja dengan perangkat keras grafis pada hard drive atau sumber tertentu lainnya. Setiap perintah dirancang untuk melakukan tindakan tertentu, atau memulai efek khusus tertentu yang terkait dengan grafis.</string>
    <string name="materi1_opengl_9">OpenGL adalah suatu spesifikasi grafik yang low-level yang menyediakan fungsi untuk pembuatan grafik primitif termasuk titik, garis, dan lingkaran. OpenGL digunakan untuk keperluan-keperluan pemrograman grafis. OpenGL bersifat open-source, multi-platform dan multi-language serta digunakan mendefinisikan suatu objek, baik objek 2 dimensi maupun objek 3 dimensi. OpenGL juga merupakan suatu antarmuka pemrograman aplikasi (Application Programming Interface) API yang tidak tergantung pada piranti dan platform yang digunakan, sehingga OpenGL dapat berjalan pada berbagai sistem operasi.</string>
    <string name="materi1_opengl_10">Evolusi OpenGL</string>
    <string name="materi1_opengl_11">Pendahulu openGL adalah IRIS GL dari SGI. Pada mulanya adalah library grafis 2D, yang berevolusi menjadi API program 3D untuk workstation canggih milik perusahaan tersebut.</string>
    <string name="materi1_opengl_12">OpenGL adalah hasil dari usaha SGI untuk mengembangkan dan meningkatkan kemampuan portable IRIS. API grafis yang baru akan menawarkan kemampuan IRIS GL tetapi dengan standar yang lebih terbuka, dengan input dari pembuatan hardware lain dan sistem operasi lain, dan akan memudahkan adaptasi ke hardware platform dan sistem operasi lain.</string>
    <string name="materi1_opengl_13">Untuk lebih mempopulerkan openGL, SGI mengijinkan pihak lain untuk mengembangkan standart openGL. Beberapa vendor menyambut hal tersebut dengan membentuk OpenGL Architecture Review Board (ARB). Pendiri openGL adalah SGI, Digital Equepment Corporation, IBM, Intel dan Microsoft. pada tanggal 1 Juli 1992, OpenGL versi 1.0 diperkenalkan.</string>
    <string name="materi1_opengl_14">Letak openGL dalam aplikasi gambar pada umumnya ketika aplikasi berjalan program tersebut memanggil banyak fungsi, beberapa yang disediakan oleh sistem operasi bahasa pemrograman. Aplikasi windows membuat output pada layar biasanya dengan memanggil sebuah API windows yang disebut Graphics Device Interface, yang memungkinkan sebagai penulisan teks pada sebuah windows, menggambar garis 2D sederhana dan lainnya. Implementasi dari openGL mengambil permintaan grafis dari aplikasi dan membangun sebuah gambar berwarna dari grafis 3D, kemudian memberikan gambar tersebut ke GDI untuk ditampilkan pada layar monitor.</string>
    <string name="materi1_opengl_image3">Logo OpenGL</string>
    <string name="materi1_opengl_image4">Logo SGI</string>
</resources>