<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pendtium.grafikaapp.ui.HalamanUtama.HalamanUtamaFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_halaman_utama" />

    <fragment
        android:id="@+id/nav_materi"
        android:name="com.pendtium.grafikaapp.ui.materi.MateriFragment"
        android:label="@string/menu_materi"
        tools:layout="@layout/fragment_materi" />

    <fragment
        android:id="@+id/nav_video"
        android:name="com.pendtium.grafikaapp.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.pendtium.grafikaapp.ui.kuis.KuisFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_kuis" />

    <fragment
        android:id="@+id/nav_petunjuk_penggunaan"
        android:name="com.pendtium.grafikaapp.ui.PetunjukPenggunaan.PetunjukPenggunaanFragment"
        android:label="@string/menu_petunjuk_penggunaan"
        tools:layout="@layout/fragment_halaman_utama" />

    <fragment
        android:id="@+id/nav_informasi"
        android:name="com.pendtium.grafikaapp.ui.informasi.InformasiFragment"
        android:label="@string/menu_informasi"
        tools:layout="@layout/fragment_informasi" />
</navigation>