<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.pendtium.grafikaapp.ui.materi.Materi2Primitive.DefinisiFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:background="@drawable/input2">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="1. "
                    android:textAlignment="center"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/materi1_opengl_1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_2"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:paddingTop="20dp"
                    android:src="@drawable/james_clark"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/materi1_opengl_image1"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_3"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:paddingTop="20dp"
                    android:src="@drawable/irisgl"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/materi1_opengl_image2"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_5"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:background="@drawable/input2">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="2. "
                    android:textAlignment="center"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/materi1_opengl_6"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_7"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:paddingTop="20dp"
                    android:src="@drawable/opengl_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/materi1_opengl_image3"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_8"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_9"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:background="@drawable/input2">
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:text="3. "
                    android:textAlignment="center"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/materi1_opengl_10"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/input4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_11"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    android:paddingTop="20dp"
                    android:src="@drawable/sgi_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/materi1_opengl_image4"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_12"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_13"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text="@string/materi1_opengl_14"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="20dp"
                    android:lineSpacingMultiplier="1.25"
                    android:text=" "
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
